--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+			<version>2.6.4</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
